# biotypes

./: CMakeLists.txt  README.md
include/lbcb/biotypes/: bioseq.h
src/lbcb/biotypes/: bioseq.cc
test/: BiotypesTest.cmake  bioseq_test.cc  main.cc
